-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.8.0, 6.8.1
-
Qt 6.8.0 and 6.8.1 via PySide6
Windows 10
-
b09b10373 (dev), aaa656e47 (6.10)
In this particular example the contents of a shape depends on the size of the shape, and the size of the shape is updated while it is being shown. In our real application the delays happen due to loading data in the background etc., the example is a bit contrived in order to reproduce the bug.
Rendered in the example are two rectangles, a red one using the curve renderer, and a blue one using the default (geometry) renderer. When the dialog initially loads, the blue rectangle fills the height of the dialog as expected, but the red one does not. However, if the window is resized then both rectangles updated to fill the dialog.
For Gerrit Dashboard: QTBUG-133267 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
664968,1 | Curve renderer: Handle multiple syncs before updateNode | 6.9 | qt/qtdeclarative | Status: NEW | +2 | 0 |
662614,2 | Curve renderer: Handle multiple syncs before updateNode | dev | qt/qtdeclarative | Status: MERGED | +2 | +1 |
664612,2 | Curve renderer: Handle multiple syncs before updateNode | 6.10 | qt/qtdeclarative | Status: MERGED | +2 | 0 |