Curve renderer: Handle multiple syncs before updateNode

The renderer may receive multiple beginSync/endSync calls, with new
path changes inbetween, before updateNode() is performed to commit the
new node data. For a shape in the default non-asynchronous mode, the
later sync rounds would not be handled in a timely fashion in such
cases.

Fixes: QTBUG-133267
Pick-to: 6.8
Change-Id: I65345b50755a2528663a28de3599be0b256a4790
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@qt.io>
(cherry picked from commit b09b10373678e0345bea57910807f9f8f5fe18e4)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit aaa656e470da840559ddf85b56ac810b2a874d7c)